# haskell.nix

./: package-set.nix
builder/: comp-builder.nix  default.nix
modules/: component-driver.nix  package.nix  shell-env.nix  with-package-wrapper.nix
test/: default.nix
test/builder-haddock/: default.nix  test-haddock.cabal  test-haddock.nix
test/with-packages/: default.nix
